--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -4,8 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:startColor="#fffafa"
-        android:endColor="#fffafa"
+        android:startColor="#ff69b4"
+        android:endColor="#4169e1"
         android:type="linear">
 
     </gradient>
