--- a/app/src/main/res/drawable/my_border.xml
+++ b/app/src/main/res/drawable/my_border.xml
@@ -4,13 +4,13 @@
 
     <!-- View background color -->
     <solid
-        android:color="@color/white" >
+        android:color="#3cf1ebf1">
     </solid>
 
     <!-- View border color and width -->
     <stroke
-        android:width="1dp"
-        android:color="@color/black" >
+        android:width="0.2dp"
+        android:color="@color/white" >
     </stroke>
 
     <!-- The radius makes the corners rounded -->
