--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="25dp"
-    android:background="@drawable/gradient_bg"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent" >
+
+
+    <LinearLayout
+        android:id="@+id/InputLocationLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="25dp"
+        android:background="@drawable/gradient_bg"
+        android:visibility="gone">
+
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="25dp">
+        <EditText
+            android:id="@+id/editLocationText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#CCCCCC"
+            android:ems="10">
+            <requestFocus />
+        </EditText>
+        <Button
+            android:id="@+id/LocationBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Back" />
+    </LinearLayout>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp">
+        </Space>
+        <TextView
+            android:id="@+id/Location0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text=""
+            android:textSize="24dp">
+        </TextView>
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp">
+        </Space>
+        <TextView
+            android:id="@+id/Location1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text=""
+            android:textSize="24dp">
+        </TextView>
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp">
+        </Space>
+        <TextView
+            android:id="@+id/Location2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text=""
+            android:textSize="24dp">
+        </TextView>
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp">
+        </Space>
+        <TextView
+            android:id="@+id/Location3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text=""
+            android:textSize="24dp">
+        </TextView>
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp">
+        </Space>
+        <TextView
+            android:id="@+id/Location4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text=""
+            android:textSize="24dp">
+        </TextView>
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp">
+        </Space>
+
+    </LinearLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/MainLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="25dp"
+        android:background="@drawable/gradient_bg"
+        android:visibility="visible"
+        tools:context=".MainActivity">
+
+
+        <Button
+            android:id="@+id/launchLocationInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="10dp"
+            android:text="GO" />
 
     <RelativeLayout
         android:id="@+id/mainContainer"
@@ -529,3 +648,5 @@
     </TextView>
 
 </RelativeLayout>
+
+</FrameLayout>
