--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,16 +119,7 @@
         tools:context=".MainActivity">
 
 
-        <Button
-            android:id="@+id/launchLocationInput"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
-            android:text="GO" />
-
-    <RelativeLayout
+        <RelativeLayout
         android:id="@+id/mainContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -254,6 +245,15 @@
             android:layout_marginTop="18dp"
             android:layout_marginBottom="1dp"
             android:orientation="vertical">
+
+            <Button
+                android:id="@+id/launchLocationInput"
+                android:textSize="10dp"
+                android:layout_width="120dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="15dp"
+                android:text="New Location" />
 
             <TextView
                 android:id="@+id/yourbabysoutfit"
