--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,10 +153,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="..."
+                android:text="7:49 PM"
                 android:textSize="22dp">
 
             </TextView>
+            <Button
+                android:id="@+id/launchLocationInput"
+                android:textSize="8dp"
+                android:layout_width="110dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="0dp"
+                android:text="New Location" />
 
             <ImageView
                 android:id="@+id/weatherIconContainer"
@@ -232,7 +240,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/recycler_view"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="20dp"
             tools:listitem="@layout/hourly"/>
 
 
@@ -246,14 +254,7 @@
             android:layout_marginBottom="1dp"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/launchLocationInput"
-                android:textSize="10dp"
-                android:layout_width="120dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="15dp"
-                android:text="New Location" />
+
 
             <TextView
                 android:id="@+id/yourbabysoutfit"
