--- a/app/src/main/res/layout/hourly.xml
+++ b/app/src/main/res/layout/hourly.xml
@@ -15,7 +15,7 @@
         android:padding="0dp">
 
         <TextView
-            android:id="@+id/time"
+            android:id="@+id/timehourly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
